--- a/go-rewrite/templates/home.html
+++ b/go-rewrite/templates/home.html
@@ -21,7 +21,7 @@
             <div class="col-md-6">
                 <div class="form-group">
                     <label for="firstname">Firstname *</label>
-                    <input id="firstname" type="text" name="name" class="form-control" placeholder="Please enter your name*" required="required" data-error="Firstname is required.">
+                    <input id="firstname" type="text" name="firstname" class="form-control" placeholder="Please enter your name*" required="required" data-error="Firstname is required.">
                     <div class="help-block with-errors"></div>
                 </div>
             </div>
