--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -46,7 +46,7 @@
             </div>
             <div class="col-md-4">
                 <div class="form-group">
-                    <label for="other_lastname">Their lastnamae</label>
+                    <label for="other_lastname">Their lastname</label>
                     <input id="other_lastname" type="text" name="other_lastname" class="form-control" placeholder="Please enter their lastname*" required="required" data-error="Valid last is required.">
                     <div class="help-block with-errors"></div>
                 </div>
