--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -8,6 +8,7 @@
     <title>Password Exchange    </title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <!-- <script src="js/script.js"></script> -->
+    <link rel="stylesheet" href="assets/style.css">
 
 </head>
 <body>
@@ -56,6 +57,11 @@
                     <label for="other_email">Their email</label>
                     <input id="other_email" type="email" name="other_email" class="form-control" placeholder="Please enter their Email*" required="required" data-error="Valid Email is required.">
                     <div class="help-block with-errors"></div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="form-group">
+                    <input id="other_information" name="other_information" class="hide_me">
                 </div>
             </div>
             
