--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -79,6 +79,10 @@
                 </div>
             </div>
             </div>
+            <div></div>
+            <div class="h-captcha" data-sitekey="60dfe638-9468-4248-a919-8a0db43986fe"></div>
+
+            <script src="https://js.hcaptcha.com/1/api.js" async defer></script>
 
             <div id="success"></div>
                         <div class="row">
