--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -9,7 +9,11 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <!-- <script src="js/script.js"></script> -->
     <link rel="stylesheet" href="assets/style.css">
-
+    <script type="text/javascript">
+        function onSubmit(token) {
+          document.getElementById('contact-form').submit();
+        }
+      </script>
 </head>
 <body>
 <form id="contact-form" method="post" action="/" role="form">
@@ -75,14 +79,13 @@
             </div>
             </div>
             <div></div>
-            <div class="h-captcha" data-sitekey="60dfe638-9468-4248-a919-8a0db43986fe"></div>
 
-            <script src="https://js.hcaptcha.com/1/api.js" async defer></script>
+            <script src="https://js.hcaptcha.com/1/api.js?hl=en" async defer></script>
 
             <div id="success"></div>
                         <div class="row">
                             <div  class="form-group col-xs-12">
-                                <button id="contactFormSubmit"   type="submit" class="btn btn-success btn-lg">Send</button>
+                                <button id="contactFormSubmit"  data-callback="onSubmit" type="submit" data-sitekey="60dfe638-9468-4248-a919-8a0db43986fe" class="btn btn-success h-captcha btn-lg">Send</button>
                             <div id="wasitasuccess"> </div>
                             </div>
 
