--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -22,7 +22,20 @@
     <div class="messages"></div>
 
     <div class="controls">
+{{ with .Errors.Email }}
 
+<div class="row">
+<div class="col-lg-12">
+    <div class="alert alert-danger" role="alert">
+
+    <p class="error">{{ . }}</p>
+    </div>
+
+
+</div>
+
+</div>
+{{ end }}
         <div class="row">
             <div class="col-md-6">
                 <div class="form-group">
@@ -31,11 +44,10 @@
                     <div class="help-block with-errors"></div>
                 </div>
             </div>
+
             <div class="col-md-6">
                 <div class="form-group">
-                  {{ with .Errors.Email }}
-                  <p class="error">{{ . }}</p>
-                  {{ end }}
+
                     <label for="email">Email *</label>
                     <input id="email" type="email" name="email" class="form-control" placeholder="Please enter your email"  data-error="email is required.">
                     <div class="help-block with-errors"></div>
@@ -66,6 +78,15 @@
             </div>
             
             
+        </div>
+        <div class="row">
+            <div class="alert alert-secondary" role="alert">
+
+              <div class="col-lg-12">
+                  <input type="checkbox" name="needEmail" id="needEmail" onchange="hideField(this)" class="form-conrol">
+                  <label for="needEmail">Check this box if you want to handle distrubtion (no email)</label>
+               </div>
+            </div>
         </div>
         <div class="row">
             <div class="col-md-12">
@@ -101,6 +122,22 @@
     </div>
 
 </form>
+<script
+  src="https://code.jquery.com/jquery-3.6.0.slim.min.js"
+  integrity="sha256-u7e5khyithlIdTpu22PHhENmPcRdFiHRjhAuHcs05RI="
+  crossorigin="anonymous"></script>
+<script>
+    function hideField(currentObject) {
+    var inputDiv = document.querySelectorAll('input[type=email]');
+    if ($(currentObject).is(":checked")) {
+        $(inputDiv).hide();
+        $(inputDiv).value ="";
+    }
+    else {
+        $(inputDiv).show().focus();
+    }
+}
+</script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
 
 </body>
