--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -8,7 +8,7 @@
     <title>Password Exchange    </title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <!-- <script src="js/script.js"></script> -->
-    <link rel="stylesheet" href="assets/style.css">
+    <link rel="stylesheet" href="/assets/style.css">
     <script type="text/javascript">
         function onSubmit(token) {
           document.getElementById('contact-form').submit();
@@ -39,7 +39,7 @@
         <div class="row">
             <div class="col-md-6">
                 <div class="form-group">
-                    <label for="firstname">Firstname *</label>
+                    <label class="info" for="firstname" data-bs-toggle="tooltip" title="This is used to inform the email recipeint who sent the message, it is not stored or verified." >Firstname *</label>
                     <input id="firstname" type="text" name="firstname" class="form-control" placeholder="Please enter your name*" required="required" data-error="Firstname is required.">
                     <div class="help-block with-errors"></div>
                 </div>
