--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -16,8 +16,10 @@
       </script>
 </head>
 <body>
-    <a href="https://github.com/Anthony-Bible/password-exchange" class="github-corner" aria-label="View source on GitHub"><svg width="80" height="80" viewBox="0 0 250 250" style="fill:#151513; color:#fff; position: absolute; top: 0; border: 0; right: 0;" aria-hidden="true"><path d="M0,0 L115,115 L130,115 L142,142 L250,250 L250,0 Z"></path><path d="M128.3,109.0 C113.8,99.7 119.0,89.6 119.0,89.6 C122.0,82.7 120.5,78.6 120.5,78.6 C119.2,72.0 123.4,76.3 123.4,76.3 C127.3,80.9 125.5,87.3 125.5,87.3 C122.9,97.6 130.6,101.9 134.4,103.2" fill="currentColor" style="transform-origin: 130px 106px;" class="octo-arm"></path><path d="M115.0,115.0 C114.9,115.1 118.7,116.5 119.8,115.4 L133.7,101.6 C136.9,99.2 139.9,98.4 142.2,98.6 C133.8,88.0 127.5,74.4 143.8,58.0 C148.5,53.4 154.0,51.2 159.7,51.0 C160.3,49.4 163.2,43.6 171.4,40.1 C171.4,40.1 176.1,42.5 178.8,56.2 C183.1,58.6 187.2,61.8 190.9,65.4 C194.5,69.0 197.7,73.2 200.1,77.6 C213.8,80.2 216.3,84.9 216.3,84.9 C212.7,93.1 206.9,96.0 205.4,96.6 C205.1,102.4 203.0,107.8 198.3,112.5 C181.9,128.9 168.3,122.5 157.7,114.1 C157.9,116.9 156.7,120.9 152.7,124.9 L141.0,136.5 C139.8,137.7 141.6,141.9 141.8,141.8 Z" fill="currentColor" class="octo-body"></path></svg></a><style>.github-corner:hover .octo-arm{animation:octocat-wave 560ms ease-in-out}@keyframes octocat-wave{0%,100%{transform:rotate(0)}20%,60%{transform:rotate(-25deg)}40%,80%{transform:rotate(10deg)}}@media (max-width:500px){.github-corner:hover .octo-arm{animation:none}.github-corner .octo-arm{animation:octocat-wave 560ms ease-in-out}}</style>
-<form id="contact-form" method="post" action="/" role="form">
+    <a href="https://github.com/Anthony-Bible/password-exchange" class="github-corner" aria-label="View source on GitHub"><svg width="80" height="80" viewBox="0 0 250 250" style="fill:#151513; color:#fff; position: absolute; top: 0; border: 0; right: 0;" aria-hidden="true"><path d="M0,0 L115,115 L130,115 L142,142 L250,250 L250,0 Z"></path><path d="M128.3,109.0 C113.8,99.7 119.0,89.6 119.0,89.6 C122.0,82.7 120.5,78.6 120.5,78.6 C119.2,72.0 123.4,76.3 123.4,76.3 C127.3,80.9 125.5,87.3 125.5,87.3 C122.9,97.6 130.6,101.9 134.4,103.2" fill="currentColor" style="transform-origin: 130px 106px;" class="octo-arm"></path><path d="M115.0,115.0 C114.9,115.1 118.7,116.5 119.8,115.4 L133.7,101.6 C136.9,99.2 139.9,98.4 142.2,98.6 C133.8,88.0 127.5,74.4 143.8,58.0 C148.5,53.4 154.0,51.2 159.7,51.0 C160.3,49.4 163.2,43.6 171.4,40.1 C171.4,40.1 176.1,42.5 178.8,56.2 C183.1,58.6 187.2,61.8 190.9,65.4 C194.5,69.0 197.7,73.2 200.1,77.6 C213.8,80.2 216.3,84.9 216.3,84.9 C212.7,93.1 206.9,96.0 205.4,96.6 C205.1,102.4 203.0,107.8 198.3,112.5 C181.9,128.9 168.3,122.5 157.7,114.1 C157.9,116.9 156.7,120.9 152.7,124.9 L141.0,136.5 C139.8,137.7 141.6,141.9 141.8,141.8 Z" fill="currentColor" class="octo-body"></path></svg></a>
+<div class="back">
+    <div class="container  div-center">
+    <form id="contact-form" method="post" action="/" role="form">
 
     <div class="messages"></div>
 
@@ -48,46 +50,53 @@
             <div class="col-md-6">
                 <div class="form-group">
 
-                    <label for="email">Email *</label>
-                    <input id="email" type="email" name="email" class="form-control" placeholder="Please enter your email"  data-error="email is required.">
+                    <label for="email" class="hidewhenchecked">Email *</label>
+                    <input id="email" type="email" name="email" class="hidewhenchecked form-control" placeholder="Please enter your email"  data-error="email is required.">
                     <div class="help-block with-errors"></div>
                 </div>
             </div>
         </div>
         <div class="row">
-            <div class="col-md-4">
+            <div class="col-sm-4">
                 <div class="form-group">
                     <label for="other_firstname">Their Firstname</label>
                     <input id="other_firstname" type="text" name="other_firstname" class="form-control" placeholder="Please enter their firstname*" required="required" data-error="Valid firstname is required.">
                     <div class="help-block with-errors"></div>
                 </div>
             </div>
-            <div class="col-md-4">
+            <div class="col-sm-4">
                 <div class="form-group">
                     <label for="other_lastname">Their lastname</label>
                     <input id="other_lastname" type="text" name="other_lastname" class="form-control" placeholder="Please enter their lastname*" required="required" data-error="Valid last is required.">
                     <div class="help-block with-errors"></div>
                 </div>
             </div>
-            <div class="col-md-4">
+            <div class="col-sm-4">
                 <div class="form-group">
-                    <label for="other_email">Their email</label>
-                    <input id="other_email" type="email" name="other_email" class="form-control" placeholder="Please enter their Email*" required="required" data-error="Valid Email is required.">
+                    <label for="other_email" class="hidewhenchecked">Their email</label>
+                    <input id="other_email" type="email" name="other_email" class="hidewhenchecked form-control" placeholder="Please enter their Email*" required="required" data-error="Valid Email is required.">
                     <div class="help-block with-errors"></div>
                 </div>
             </div>
             
             
-        </div>
+        </div>  
         <div class="row">
-            <div class="alert alert-secondary" role="alert">
-
-              <div class="col-lg-12">
-                  <input type="checkbox" name="skipEmail" id="skipEmail" onchange="hideField(this)" >
-                  <label for="skipEmail">Check this box if you want to handle distrubtion (no email)</label>
-               </div>
-            </div>
+            <div class="col-sm-6">
+                <label for="turingtest"  class="info hidewhenchecked" data-bs-toggle="tooltip" title="This is used to prevent spam emails, not required if self distributing" >Which Color is the sky: blue, green or red? *</label>
+                <input type="text" class="hidewhenchecked form-control" name="color" required="required" pattern="[ ]*(red|blue|orange|green)[ ]*" title="Pick the fluffiest animal"/>
         </div>
+        </div>
+        <div class="row gy-5">
+                <div class="col-sm-6">
+                    <div class="form-check form-switch">
+                    <input type="checkbox" name="skipEmail" class="form-check-input" id="skipEmail" onchange="hideField(this)" >
+                    <label for="skipEmail" class="form-check-label" >Check this box if you want to handle distrubtion (no email)</label>
+                 </div>
+              </div>
+
+        </div>
+
         <div class="row">
             <div class="col-md-12">
                 <div class="form-group">
@@ -116,26 +125,28 @@
             <div class="col-md-12">
                 <p class="text-muted">
                     <strong>*</strong> These fields are required. Contact form template by
-                    <a href="https://bootstrapious.com/p/how-to-build-a-working-bootstrap-contact-form" target="_blank">Bootstrapious</a>.</p>
-            </div>
         </div>
     </div>
 
 </form>
+</div>
+</div>
 <script
   src="https://code.jquery.com/jquery-3.6.0.slim.min.js"
   integrity="sha256-u7e5khyithlIdTpu22PHhENmPcRdFiHRjhAuHcs05RI="
   crossorigin="anonymous"></script>
 <script>
     function hideField(currentObject) {
-    var inputDiv = document.querySelectorAll('input[type=email]');
+    var hideElements = document.querySelectorAll('.hidewhenchecked')
     if ($(currentObject).is(":checked")) {
-        $(inputDiv).hide();
-        $(inputDiv).prop('required', false);
-        $(inputDiv).val("");
+        $(hideElements).hide();
+        $(hideElements).prop('required', false);
+        $(hideElements).val("")
     }
     else {
-        $(inputDiv).show().focus();
+        $(hideElements).show().focus();
+        $(hideElements).prop('required', true)
+
     }
 }
 </script>
