more styling changes

--- a/app/templates/assets/style.css
+++ b/app/templates/assets/style.css
@@ -8,6 +8,7 @@ label.info{
   position: absolute;
   top: 0;
   bottom: 0;
+  z-index: -1;
 }
 .div-center {
   width: 80%;
@@ -26,3 +27,4 @@ label.info{
   border-bottom: 2px solid #ccc;
   display: table;
 }
+.github-corner:hover .octo-arm{animation:octocat-wave 560ms ease-in-out}@keyframes octocat-wave{0%,100%{transform:rotate(0)}20%,60%{transform:rotate(-25deg)}40%,80%{transform:rotate(10deg)}}@media (max-width:500px){.github-corner:hover .octo-arm{animation:none}.github-corner .octo-arm{animation:octocat-wave 560ms ease-in-out}}
