--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -6,6 +6,8 @@
         <p class="card-text">The goal of Password Exchange is to create an easy and secure way to share passwords and other sensitive text. You can use our form or our slackbot with more ways to share coming soon. We understand that transparency is the key to trust which is why we're completly open source. This means you can take a look at the code or even run your own instance.</p>
     </div>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
 
 </body>
 </html>
