--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -6,7 +6,7 @@
           document.getElementById('contact-form').submit();
         }
       </script>
-    <div class="back">
+    <div class="back min-vh-100">
     <div class="bg-white h-80 shaddow-lg rounded w-80 p-5 m-5">
         <form id="contact-form" method="post" action="/" role="form">
 
@@ -117,11 +117,8 @@
 </form>
 </div>
 </div>
-<script
-  src="https://code.jquery.com/jquery-3.6.0.slim.min.js"
-  integrity="sha256-u7e5khyithlIdTpu22PHhENmPcRdFiHRjhAuHcs05RI="
-  crossorigin="anonymous"></script>
-<script>
+
+<script defer>
     function hideField(currentObject) {
     var hideElements = document.querySelectorAll('.hidewhenchecked')
     if ($(currentObject).is(":checked")) {
@@ -136,7 +133,8 @@
     }
 }
 </script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
+<!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script> -->
+<!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous"> -->
 
 </body>
 </html>
