--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -7,7 +7,7 @@
         }
       </script>
     <div class="back min-vh-100">
-    <div class="bg-white h-80 shaddow-lg rounded w-80 p-5 m-5">
+    <div class="bg-white h-80 shadow-lg rounded w-80 p-5 my-5 m-md-5">
         <form id="contact-form" method="post" action="/" role="form">
 
     <div class="messages"></div>
