--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -117,7 +117,7 @@
 </form>
 </div>
 </div>
-
+<a href="https://slack.com/oauth/v2/authorize?client_id=1030085059062.2470344908147&scope=channels:history,chat:write,commands,groups:history,im:history,mpim:history,groups:write&user_scope="><img alt="Add to Slack" height="40" width="139" src="https://platform.slack-edge.com/img/add_to_slack.png" srcSet="https://platform.slack-edge.com/img/add_to_slack.png 1x, https://platform.slack-edge.com/img/add_to_slack@2x.png 2x" /></a>
 <script defer>
     function hideField(currentObject) {
     var hideElements = document.querySelectorAll('.hidewhenchecked')
