properly do newlines

--- a/app/templates/decryption.html
+++ b/app/templates/decryption.html
@@ -1,7 +1,7 @@
 {{ template "header.html" }}
 <div class="container">
   <h3>Here is the decrypted message:</h3>
-  <p>{{.DecryptedMessage}}</p>
+  <p style="white-space: pre-wrap">{{.DecryptedMessage}}</p>
 </div>
 </body>
 </html>
