change checked to input box

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -77,8 +77,8 @@
         </div>
         <div class="col-sm-6 my-auto">
             <div class="form-check form-switch">
-            <input type="checkbox" name="skipEmail" class="form-check-input" id="skipEmail" onchange="hideField(this)" >
-            <label for="skipEmail" class="form-check-label" checked >Click this if you want to handle distrubtion (no email)</label>
+            <input type="checkbox" name="skipEmail" class="form-check-input" id="skipEmail" onchange="hideField(this)" checked>
+            <label for="skipEmail" class="form-check-label" >Click this if you want to handle distrubtion (no email)</label>
          </div>
       </div>
         </div>
