add missing class

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -31,7 +31,7 @@
             <div class="col-md-6">
                 <div class="form-group">
                     <label class="info hidewhenchecked" for="firstname" data-bs-toggle="tooltip" title="This is used to inform the email recipeint who sent the message, it is not stored or verified." >Firstname *</label>
-                    <input id="firstname" type="text" class="hidewhenchecked" name="firstname" class="form-control" placeholder="Please enter your name*" required="required" data-error="Firstname is required.">
+                    <input id="firstname" type="text" class="hidewhenchecked form-control" name="firstname" class="form-control" placeholder="Please enter your name*" required="required" data-error="Firstname is required.">
                     <div class="help-block with-errors"></div>
                 </div>
             </div>
@@ -56,7 +56,7 @@
             <div class="col-sm-4">
                 <div class="form-group">
                     <label for="other_lastname" class="hidewhenchecked">Their lastname</label>
-                    <input id="other_lastname" class="hidewhenchecked" type="text" name="other_lastname" class="form-control" placeholder="Please enter their lastname*" required="required" data-error="Valid last is required.">
+                    <input id="other_lastname" class="hidewhenchecked form-control" type="text" name="other_lastname" class="form-control" placeholder="Please enter their lastname*" required="required" data-error="Valid last is required.">
                     <div class="help-block with-errors"></div>
                 </div>
             </div>
