their vs they're

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -48,7 +48,7 @@
         <div class="row">
             <div class="col-sm-4">
                 <div class="form-group">
-                    <label for="other_firstname" class="info" data-bs-toggle="tooltip" title="This is used as a passphrase to verify their allowed to access it"   >Their Firstname/Passphrase</label>
+                    <label for="other_firstname" class="info" data-bs-toggle="tooltip" title="This is used as a passphrase to verify they're allowed to access it"   >Their Firstname/Passphrase</label>
                     <input id="other_firstname" type="text" name="other_firstname" class="form-control"   placeholder="Please enter their firstname*" >
                     <div class="help-block with-errors"></div>
                 </div>
