use last name as passphrase

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -48,15 +48,15 @@
         <div class="row">
             <div class="col-sm-4">
                 <div class="form-group">
-                    <label for="other_firstname" class="info" data-bs-toggle="tooltip" title="This is used as a passphrase to verify they're allowed to access it"   >Their Firstname/Passphrase</label>
-                    <input id="other_firstname" type="text" name="other_firstname" class="form-control"   placeholder="Please enter their firstname*" >
+                    <label for="other_firstname" class="hidewhenchecked"  >Their Firstname</label>
+                    <input id="other_firstname" type="text" name="other_firstname" class="form-control hidewhenchecked"   placeholder="Please enter their firstname*" >
                     <div class="help-block with-errors"></div>
                 </div>
             </div>
             <div class="col-sm-4">
                 <div class="form-group">
-                    <label for="other_lastname" class="hidewhenchecked">Their lastname</label>
-                    <input id="other_lastname" class="hidewhenchecked form-control" type="text" name="other_lastname" class="form-control" placeholder="Please enter their lastname*" required="required" data-error="Valid last is required.">
+                    <label for="other_lastname" class="info" data-bs-toggle="tooltip" title="This is used as a passphrase to verify they're allowed to access it"  >Their lastname/Passphrase </label>
+                    <input id="other_lastname" class="form-control" type="text" name="other_lastname" placeholder="Please enter their lastname*" required="required" data-error="Valid last is required.">
                     <div class="help-block with-errors"></div>
                 </div>
             </div>
