--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -118,23 +118,26 @@
 </div>
 </div>
 <script async>
+$(document).ready(function(e) {
+
     hideFields($("#skipEmail"));
     function hideField(currentObject) {
       hideFields(currentObject);
-}
-function hideFields(currentObject){
-    var hideElements = document.querySelectorAll('.hidewhenchecked')
-    if ($(currentObject).is(":checked")) {
-        $(hideElements).hide();
-        $(hideElements).prop('required', false);
-        $(hideElements).val("")
     }
-    else {
-        $(hideElements).show().focus();
-        $(hideElements).prop('required', true)
-
-    }
-}
+    function hideFields(currentObject){
+       var hideElements = document.querySelectorAll('.hidewhenchecked')
+       if ($(currentObject).is(":checked")) {
+           $(hideElements).hide();
+           $(hideElements).prop('required', false);
+           $(hideElements).val("")
+       }
+       else {
+           $(hideElements).show().focus();
+           $(hideElements).prop('required', true)
+   
+       }
+    }   
+});
 </script>
 <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script> -->
 <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous"> -->
