remove login submit loop

--- a/app/templates/decryption.html
+++ b/app/templates/decryption.html
@@ -30,12 +30,8 @@
 <script>
   $(document).ready(function(e) {
   $('#loginModal').modal('show');
-  //handle the form's "submit" event
-  $("#loginForm").submit(function(event) {
-    event.preventDefault(); //stop a full postback
+  //handle the form's "submit" events
 
-   $("#loginForm").submit();
-  });
 });
 </script>
 </body>
