fix decryption form

--- a/app/templates/decryption.html
+++ b/app/templates/decryption.html
@@ -12,7 +12,7 @@
                   <span aria-hidden="true">&times;</span>
                 </button>
         </div>
-        <form id="loginForm" action="post"> <!-- form with an ID so we can identify it, now includes both the textbox and the button within it -->
+        <form id="loginForm" method="POST"> <!-- form with an ID so we can identify it, now includes both the textbox and the button within it -->
         <div class="modal-body">
             <div class="form-group">
               <label for="modalpass" class="col-form-label">Last Name:</label>
