change id for decryption form

--- a/app/templates/decryption.html
+++ b/app/templates/decryption.html
@@ -16,7 +16,7 @@
         <div class="modal-body">
             <div class="form-group">
               <label for="modalpass" class="col-form-label">Last Name:</label>
-              <input type="password" name="modalpass" class="form-control" id="modalpass">
+              <input type="password" name="modalpass" class="form-control" id="passphrase">
             </div>
         </div>
         <div class="modal-footer">
