change id for decryption form

--- a/app/templates/decryption.html
+++ b/app/templates/decryption.html
@@ -15,8 +15,8 @@
         <form id="loginForm" method="POST"> <!-- form with an ID so we can identify it, now includes both the textbox and the button within it -->
         <div class="modal-body">
             <div class="form-group">
-              <label for="modalpass" class="col-form-label">Last Name:</label>
-              <input type="password" name="modalpass" class="form-control" id="passphrase">
+              <label for="passphrase" class="col-form-label">Last Name:</label>
+              <input type="password" name="passphrase" class="form-control" id="passphrase">
             </div>
         </div>
         <div class="modal-footer">
