add css styling

--- a/app/templates/decryption.html
+++ b/app/templates/decryption.html
@@ -36,7 +36,7 @@
 });
 </script>
 {{else}}
-<p>{{.DecryptedMessage}} </p>
+<p style="white-space: pre-wrap">{{.DecryptedMessage}} </p>
 {{end}}
 </body>
 </html>
