--- a/app/templates/decryption.html
+++ b/app/templates/decryption.html
@@ -28,7 +28,7 @@
     </div>
   </div>
   
-<script defer>
+<script  >
   $(document).ready(function(e) {
   $('#loginModal').modal('show');
   //handle the form's "submit" events
