--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -78,7 +78,7 @@
         <div class="col-sm-6 my-auto">
             <div class="form-check form-switch">
             <input type="checkbox" name="skipEmail" class="form-check-input" id="skipEmail" onchange="hideField(this)" checked>
-            <label for="skipEmail" class="form-check-label" >Click this if you want to handle distrubtion (no email)</label>
+            <label for="skipEmail" class="form-check-label" >Toggle email distribution</label>
          </div>
       </div>
         </div>
