remove extra words from home

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -31,7 +31,7 @@
             <div class="col-md-6">
                 <div class="form-group">
                     <label class="hidewhenchecked" for="firstname"> <a href="#" data-bs-toggle="tooltip" title="This is used to inform the email recipeint who sent the message, it is not stored or verified." >Firstname *</a></label>
-                    <input id="firstname" type="text" class="hidewhenchecked form-control" name="firstname" class="form-control" placeholder="Please enter your name*" required="required" data-error="Firstname is required.">
+                    <input id="firstname" type="text" class="hidewhenchecked form-control" name="firstname" placeholder="Please enter your name*" required="required" data-error="Firstname is required.">
                     <div class="help-block with-errors"></div>
                 </div>
             </div>
@@ -66,7 +66,7 @@
                     <input id="other_email" type="email" name="other_email" class="hidewhenchecked form-control" placeholder="Please enter their Email*" required="required" data-error="Valid Email is required.">
                     <div class="help-block with-errors"></div>
                 </div>
-            </div>form-control
+            </div>
             
             
         </div>  
