change passphrase popup wording to make it more clear

--- a/app/templates/decryption.html
+++ b/app/templates/decryption.html
@@ -18,7 +18,7 @@
         <form id="loginForm" method="POST">
         <div class="modal-body"> 
             <div class="form-group">
-              <label for="passphrase" class="col-form-label"><a href="#" data-bs-toggle="tooltip" title="This is used as a passphrase to verify you're allowed to access it, it's possible to be empty" >Your Last Name/Passphrase: </a></label>
+              <label for="passphrase" class="col-form-label"><a href="#" data-bs-toggle="tooltip" title="This is used as a passphrase to verify you're allowed to access it, it's possible to be empty" >Your Last Name or Passphrase: </a></label>
               <input type="password" name="passphrase" class="form-control" id="passphrase">
             </div>
         </div>
