Encryption of files work but need to start using s3 since i don't want to sticky sessions. Also started setting up groupcache so I can keep track of my fileid in relation to s3 multipart upload fileid

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -86,6 +86,7 @@
             <div class="col-sm-6">
                 <input id="file-to-upload" type="file" name="">
             </div>
+            <div id="chunk-information" class="col-sm-6"></div>
        </div>
         <div class="row">
             <div class="col-md-12">
