--- a/app/templates/decryption.html
+++ b/app/templates/decryption.html
@@ -1,6 +1,8 @@
 {{ template "header.html" }}
 
 <div class="back min-vh-100">
+    <div class="aurora a1"></div>
+    <div class="aurora a2"></div>
     <div class="container-main bg-white shadow-lg rounded p-5 my-5 mx-auto">
         <!-- Loading state -->
         <div id="loading-state" class="text-center">
